Removed redudant castings and bad comments