@@ -1,13 +1,11 @@
 package edu.purdue.comradesgui;
 
+import javax.swing.*;
+import javax.swing.event.ChangeEvent;
+import javax.swing.event.ChangeListener;
 import java.awt.*;
 import java.awt.event.*;
-import java.io.*;
-import java.lang.*;
-import java.util.*;
-import javax.swing.*;
-import javax.swing.text.*;
-import javax.swing.event.*;
+import java.util.StringTokenizer;
 
 public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionListener, ChangeListener {
 	CommunicatorInstance CI;
@@ -58,7 +56,8 @@ public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionLi
 					StringTokenizer ST = new StringTokenizer(CI.OPT_VALUE[i], "|");
 					while (ST.hasMoreTokens())
 						CI.SendTo("setoption name " + CI.OPT_NAME[i] + " value " + ST.nextToken(), false);
-				} else
+				}
+				else
 					CI.SendTo("setoption name " + CI.OPT_NAME[i] + " value " + CI.OPT_VALUE[i], false);
 			}
 		for (int i = 0; i < opt_count; i++) {
@@ -94,7 +93,7 @@ public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionLi
 	}
 
 	public void ButtonPush(String S) {
-		CI.SendTo("setoption name " + S + " value true", true); // HACK
+		CI.SendTo("setoption name " + S + " value true", true);
 		if (S.equals("RobboInformatory"))
 			new RobboInformatoryFrame(CI);
 	}
@@ -243,7 +242,8 @@ public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionLi
 				else
 					break;
 			}
-		} else {
+		}
+		else {
 			String X = new String(STR);
 			int s = X.indexOf("var ");
 			int t = X.indexOf("default ");
@@ -310,7 +310,8 @@ public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionLi
 			min = Integer.valueOf(ST.nextToken());
 			max = Integer.valueOf(ST.nextToken());
 			def = Integer.valueOf(ST.nextToken());
-		} else {
+		}
+		else {
 			while (ST.hasMoreTokens()) {
 				String S = ST.nextToken();
 				Integer m = Integer.valueOf(ST.nextToken());
@@ -324,10 +325,10 @@ public class InstanceOptionsFrame implements KeyListener, ItemListener, ActionLi
 		}
 		def = Integer.valueOf(CI.OPT_VALUE[i]);
 		if (def > max)
-			def = new Integer(max); // HACK
+			def = (max);
 		if (def < min)
-			def = new Integer(min); // HACK
-		SpinnerNumberModel MODEL = new SpinnerNumberModel(def, min, max, new Integer(1));
+			def = (min);
+		SpinnerNumberModel MODEL = new SpinnerNumberModel(def, min, max, Integer.valueOf(1));
 		JSpinner J = new JSpinner(MODEL);
 		J.setName(NAME);
 		J.addChangeListener(this);
